--- a/lib/auth2024_web/live/list_item_person_live.html.heex
+++ b/lib/auth2024_web/live/list_item_person_live.html.heex
@@ -9,7 +9,7 @@
     <select 
       id={"select-todo-item-contact-#{@item_id}"}
       name="contact_person_name"
-      class="flex-1 m-0 truncate text-gray-500 text-xs focus:bg-yellow-100 focus:ring-0 leading-5 border-none p-0"
+      class={if @look=="list" do "flex-1 truncate m-0 text-gray-500 text-xs focus:bg-yellow-100 focus:ring-0 leading-5 border-none p-0" else "flex-1 truncate mt-2 block w-full rounded-md border border-gray-300 bg-white shadow-sm focus:border-zinc-400 focus:ring-0 sm:text-sm" end}
       phx-target={@myself}
       phx-value-id={@item_id}
       phx-change={JS.dispatch("submit", to: "#form-todo-item-contact-#{@item_id}")}
