--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -44,9 +44,6 @@
                 <input class="flex-none toggle" type="checkbox" phx-value-item_id={item.id} phx-click="toggle" />
               <% end %>
             </div>
-            <div class="flex-1">
-              <button class="">&lt;&lt;</button>
-            </div>
           </div>
           <div class="flex-1 min-w-0 leading-6 text-gray-900 flex flex-col items-stretch">
             <.live_component
@@ -56,18 +53,20 @@
               user={@current_user}
               onitemchanged="on_itemlist_itemfield_changed"
             />
-            <.live_component
-              module={Auth2024Web.ListItemPersonLive}
-              id={"listitem_contact_#{item.id}"}
-              item_id={item.id}
-              contact_id={item.contact_id}
-              look="list"
-              available_persons={@available_persons}
-              user={@current_user}
-              kind={:contact}
-              onediting="on_editing_item"
-              onitemchanged="on_itemlist_itemfield_changed"
-            />
+            <%= if @sort_by_column != "contact" do %>
+              <.live_component
+                module={Auth2024Web.ListItemPersonLive}
+                id={"listitem_contact_#{item.id}"}
+                item_id={item.id}
+                contact_id={item.contact_id}
+                look="list"
+                available_persons={@available_persons}
+                user={@current_user}
+                kind={:contact}
+                onediting="on_editing_item"
+                onitemchanged="on_itemlist_itemfield_changed"
+              />
+            <%= end %>
           </div>
           <div class="flex-none flex flex-col items-end">
             <div class="flex-1">
@@ -83,12 +82,10 @@
                   phx-select={JS.dispatch("submit", to: "#" <> form_todo_item_due_id(item))}
                   value={display_due_date(item.due)}
                 />
+                <button class="" type="button">&gt;&gt;</button>
                 <input type="hidden" name="item_id" value={item.id}/>
               </form>
-            </div>
-            <div class="flex-1">
-              <button class="">&gt;&gt;</button>
-            </div>
+           </div>
           </div>
         </li>
       </Auth2024Web.GroupingComponent.for_items>
