- another try for getting the right height done.

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -96,8 +96,8 @@
     </section>
     <footer class="flex-none flex flex-col">
       <div class="flex-none flex flex-col">
-        <ul class="flex-none flex flex-row text-sm font-sm text-center text-gray-500 border-t border-gray-200 dark:border-gray-700 dark:text-gray-400">
-          <li class="flex-grow-1">
+        <ul class="flex-none flex flex-row min-w-0 min-h-0 text-sm font-sm text-center text-gray-500 border-t border-gray-200 dark:border-gray-700 dark:text-gray-400">
+          <li class="flex-grow-1 flex flex-col min-w-0 min-h-0">
             <.link 
               class={
                 ["inline-block", "p-4", "rounded-t-lg", "hover:text-gray-600", "hover:bg-gray-50", "dark:hover:bg-gray-800", "dark:hover:text-gray-300"]
@@ -108,7 +108,7 @@
               all
             </.link>
           </li>
-          <li class="flex-grow-1">
+          <li class="flex-grow-1 flex flex-col min-w-0 min-h-0">
             <.link 
               class={
                 ["inline-block", "p-4", "rounded-t-lg", "hover:text-gray-600", "hover:bg-gray-50", "dark:hover:bg-gray-800", "dark:hover:text-gray-300"]
@@ -119,7 +119,7 @@
               active
             </.link>
           </li>
-          <li class="flex-grow-1">
+          <li class="flex-grow-1 flex flex-col min-w-0 min-h-0">
             <.link 
               class={
                 ["inline-block", "p-4", "rounded-t-lg", "hover:text-gray-600", "hover:bg-gray-50", "dark:hover:bg-gray-800", "dark:hover:text-gray-300"]
@@ -130,7 +130,7 @@
               completed
             </.link>
           </li>
-          <li class="flex-grow-1">
+          <li class="flex-grow-1 flex flex-col min-w-0 min-h-0">
             <.link 
               class={
                 ["inline-block", "p-4", "rounded-t-lg", "hover:text-gray-600", "hover:bg-gray-50", "dark:hover:bg-gray-800", "dark:hover:text-gray-300"]
@@ -141,7 +141,7 @@
               by&nbsp;date
             </.link>
           </li>
-          <li class="flex-grow-1">
+          <li class="flex-grow-1 flex flex-col min-w-0 min-h-0">
             <.link 
               class={
                 ["inline-block", "p-4", "rounded-t-lg", "hover:text-gray-600", "hover:bg-gray-50", "dark:hover:bg-gray-800", "dark:hover:text-gray-300"]
