--- a/lib/auth2024_web/components/layouts/root.html.heex
+++ b/lib/auth2024_web/components/layouts/root.html.heex
@@ -18,7 +18,7 @@
   </head>
   <body 
     class="bg-white antialiased flex flex-col" 
-    style="width: 100dvw; max-width: 100dvw; min-width: 100dvw; height:100dvh; min-height: 100dvh; max-height: 100dvh;"
+    style="width: 100dvw; max-width: 100dvw; min-width: 100dvw; min-height: 100dvh; max-height: 100dvh;"
   >
     <ul class="flex-none relative z-10 flex flex-row items-center gap-4 p-0 sm:px-6 lg:px-8 justify-end">
       <%= if @current_user do %>
