- added some extra space to keep it readablye

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -95,6 +95,8 @@
             </div>
           </li>
         </Auth2024Web.GroupingComponent.for_items>
+        <li>&nbsp;</li>
+        <li>&nbsp;</li>
       </ul>
       <!-- This one to stretch to full screen height -->
       <div class="flex-1">&nbsp;</div>
