--- a/lib/auth2024_web/components/layouts/root.html.heex
+++ b/lib/auth2024_web/components/layouts/root.html.heex
@@ -33,6 +33,14 @@
         </li>
         <li>
           <.link
+            href={~p"/persons"}
+            class="text-xs leading-5 text-gray-600 font-semibold hover:text-zinc-700"
+          >
+            Persons
+          </.link>
+        </li>
+        <li>
+          <.link
             href={~p"/users/settings"}
             class="text-xs leading-5 text-gray-600 font-semibold hover:text-zinc-700"
           >
