--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -86,7 +86,7 @@
                     phx-change="validate-todo-item-due"
                     phx-blur={JS.dispatch("submit", to: "#" <> form_todo_item_due_id(item))}
                     phx-select={JS.dispatch("submit", to: "#" <> form_todo_item_due_id(item))}
-                    value={display_due_date(item.due)}
+                    value={Tools.display_due_date(item.due)}
                   />
                   <button class="" type="button">&gt;&gt;</button>
                   <input type="hidden" name="item_id" value={item.id}/>
