--- a/lib/auth2024_web/live/edit_person_live.html.heex
+++ b/lib/auth2024_web/live/edit_person_live.html.heex
@@ -15,6 +15,10 @@
       phx-target={@myself}
     >
       <Auth2024Web.CoreComponents.input 
+        id="edit_person-email"
+        field={@edit_person_form[:email]} 
+      />
+      <Auth2024Web.CoreComponents.input 
         id="edit_person-family_name"
         field={@edit_person_form[:family_name]} 
       />
