--- a/lib/auth2024_web/live/confirm_new_person_live.html.heex
+++ b/lib/auth2024_web/live/confirm_new_person_live.html.heex
@@ -18,6 +18,11 @@
     >
       <Auth2024Web.CoreComponents.error :for={msg <- @new_person_form_errors}><p><%= msg %></p></Auth2024Web.CoreComponents.error>
       <Auth2024Web.CoreComponents.input 
+        id="new-person-form-email"
+        label="email"
+        field={@new_person_form[:email]} 
+      />
+      <Auth2024Web.CoreComponents.input 
         id="new-person-form-family-name"
         label="family name"
         field={@new_person_form[:family_name]} 
