--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -20,3 +20,17 @@ body {
  height: var(--doc-height);
 }
 /* This file is for your main application CSS */
+
+@font-face {
+	font-family: 'Karla';
+	src: url('/fonts/Karla-Bold.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Karla';
+	src: url('/fonts/Karla-Light.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
