--- a/lib/auth2024_web/live/list_item_person_live.html.heex
+++ b/lib/auth2024_web/live/list_item_person_live.html.heex
@@ -7,7 +7,7 @@
   >
     <input type="hidden" name="item_id" value={@item_id}/>
 
-    <.live_component
+    <Auth2024Web.SelectPersonComponent.combobox
         id={"select-todo-item-contact-#{@item_id}"}
         module={Auth2024Web.SelectPersonComponent}
         name="contact_person_id"
