--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -70,13 +70,22 @@
               </div>
             </div>
             <div class="flex-1 flex flex-col leading-6 text-gray-900 items-stretch min-w-0 min-h-0">
-              <.live_component
-                module={Auth2024Web.ListItemCaptionLive}
-                id={"listitem_caption_#{item.id}"}
-                item={item}
-                user={@current_user}
-                onitemchanged="on_itemlist_itemfield_changed"
-              />
+              <%= if true do %>
+                <Auth2024Web.DisplayItemComponents.list_caption
+                  id={"page_live_#{item.id}"}
+                  item_id={item.id}
+                >
+                  <%= item.caption %>
+                </Auth2024Web.DisplayItemComponents.list_caption>
+              <% else %>
+                <.live_component
+                  module={Auth2024Web.ListItemCaptionLive}
+                  id={"listitem_caption_#{item.id}"}
+                  item={item}
+                  user={@current_user}
+                  onitemchanged="on_itemlist_itemfield_changed"
+                />
+              <% end %>
               <%= if @sort_by_column != "contact" do %>
                 <%= if false do %>
                   <label 
