--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -69,15 +69,10 @@
                 <% end %>
               </div>
             </div>
-            <div class="flex-1 flex flex-col leading-6 text-gray-900 items-stretch min-w-0 min-h-0">
-              <%= if true do %>
-                <Auth2024Web.DisplayItemComponents.list_caption
-                  id={"page_live_#{item.id}"}
-                  item_id={item.id}
-                >
-                  <%= item.caption %>
-                </Auth2024Web.DisplayItemComponents.list_caption>
-              <% else %>
+            <div 
+              class="flex-1 flex flex-col leading-6 text-gray-900 items-stretch min-w-0 min-h-0"
+            >
+              <%= if false do %>
                 <.live_component
                   module={Auth2024Web.ListItemCaptionLive}
                   id={"listitem_caption_#{item.id}"}
@@ -85,6 +80,13 @@
                   user={@current_user}
                   onitemchanged="on_itemlist_itemfield_changed"
                 />
+              <% else %>
+                <Auth2024Web.DisplayItemComponents.list_caption
+                  id={"page_live_#{item.id}"}
+                  item_id={item.id}
+                >
+                  <%= item.caption %>
+                </Auth2024Web.DisplayItemComponents.list_caption>
               <% end %>
               <%= if @sort_by_column != "contact" do %>
                 <%= if false do %>
