- longer authentication perion with google

--- a/lib/auth2024_web/live/page_live.html.heex
+++ b/lib/auth2024_web/live/page_live.html.heex
@@ -84,7 +84,7 @@
                 <Auth2024Web.DisplayItemComponents.list_caption
                   id={"page_live_#{item.id}"}
                   item_id={item.id}
-                  on_click="edit-item"
+                  on_click="edit-item-by-caption"
                 >
                   <%= item.caption %>
                 </Auth2024Web.DisplayItemComponents.list_caption>
@@ -93,7 +93,7 @@
                 <%= if true do %>
                   <label 
                     class="flex-1 truncate m-0 text-gray-500 text-xs focus:bg-yellow-100 focus:ring-0 leading-5 border-none p-0 text-ellipsis overflow-hidden" 
-                    phx-click="edit-item"
+                    phx-click="edit-item-by-contact"
                     phx-value-item_id={item.id}
                   >
                     <%= Tools.display_person_name(item.contact) %>
